tests/security/inoutTaint/output.txt
ERROR: TaintedData - input.hack:8:10 - Data from a URL query string found its way to an HTML tag